# stratego

./: .env  .gitignore  Makefile  README.md  analyses.py  analyses.sh  api.py  board_generator.py  boards_balenced.txt  data-test-1.csv  docker-compose.yml  package.json  plot.py  requirements.in  requirements.txt  rust_bind.py  simulate_ia.sh  test_plot.csv
game-engine/: .gitignore  Cargo.toml  README.md  api.py  build_python.sh  game-stratego  index.js  jest.config.js  main.js  main.ts  package-lock.json  package.json  requirements.txt  rust_bind.py  tsconfig.json
game-engine/ai-python/: __init__.py
game-engine/ai_python/: __init__.py  ai.py  api.py  engine.py  main.py  monte_carlo.py
game-engine/ai_python/src/: ai.py  engine.py  monte_carlo.py  utils.py
game-engine/ai_python/test/: test_engine.py  test_moves_available.py
game-engine/src/: board.ts  case.ts  engine.rs  engine.ts  engine_utils.rs  engine_utils.ts  error.rs  game_pool.rs  index.ts  lib.rs  main.rs  parse.rs  piece.ts  py_bindings.rs
game-engine/src/board/: board.ts  board_utils.rs  board_utils.ts  case.rs  classic_board.rs  mod.rs
game-engine/src/error/: error.ts
game-engine/src/piece/: move.ts  piece.ts
game-engine/src/player/: ai_player.rs  mod.rs  player.ts
game-engine/src/py_bindings/: mod.rs
game-engine/stratego-analyze/: Cargo.toml
game-engine/stratego-analyze/src/: main.rs  threads.rs  writter.rs
game-engine/stratego-exec/: Cargo.toml
game-engine/stratego-exec/src/: main.rs
game-engine/stratego-lib/: Cargo.toml
game-engine/tests/: engine.test.ts  engine_utils.test.ts
(+211 files in other folders)
