[package]
name = "game_engine"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
itertools = "0.9.0"
rand = "0.7.3"
pyo3 = "0.13.0"
lazy_static = "1.4.0"

#features = ["extension-module"]

