[package]
name = "stratego-lib"
version = "0.1.0"
authors = ["Rolf1e <tigran.slama@laposte.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4"
itertools = "0.9.0"
rand = "0.7.3"
pyo3 = "0.13.0"
lazy_static = "1.4.0"
pythonize = "0.13.0"
serde = { version = "1.0", features = ["derive"] }
